FIX: Work-around JDK25 bug on Windows